<resources>
    <string name="app_name">Banco de Semillas</string>

    <string name="navigation_drawen_open">Open navigation drawer</string>
    <string name="navigation_drawen_close">Close navigation drawer</string>

    <!-- Menu Admin -->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Mi Perfil</string>
    <string name="RegistrarGuardian">Registrar Guardian</string>
    <string name="RegistrarSemilla">Registrar Semilla</string>
    <string name="ListarGuardianes">Listar Guardianes</string>
    <string name="ListarSemillas">Listar Semillas</string>
    <string name="Salir">Salir</string>

    <!-- Menu Guardian -->
    <string name="InicioGuardian">Inicio</string>
    <string name="PerfilGuardian">Mi Perfil</string>
    <string name="ListarSemillasGuardian">Listar Semillas que Guardo</string>
    <string name="ListarSemillasBanco">Listar Semillas del Banco</string>

    <!-- Alta Guardian -->
    <string name="RegistroTXT">Registro Guardián</string>
    <string name="Correo">Correo Electrónico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Nombre">Nombre Completo</string>
    <string name="Telefono">Teléfono</string>
    <string name="Direccion">Dirección</string>
    <string name="Municipio">Municipio</string>
    <string name="IdGuardian">Número</string>
    <string name="Asamblea">Pertenece a la Asamblea</string>
    <string name="Registrar">Registrar</string>


    <!-- Menu parte superior derecha -->
    <string name="Agregar">Agregar</string>
    <string name="Lista">Lista</string>

    <!-- Agregar Semillas -->
    <string name="NombreTXTSemilla">Nombre de imagen</string>
    <string name="NombreCientificoSemilla">Nombre Científico</string>
    <string name="NombreVulgarSemilla">Nombre Vulgar</string>
    <string name="VariedadSemilla">Variedad</string>
    <string name="IdSemilla">Número en el Banco</string>
    <string name="ProcedenciaSemilla">Procedencia</string>
    <string name="GramosMinimosSemilla">Gramos Mínimos</string>
    <string name="Viavilidad">Viavilidad</string>
    <string name="MesRepartoSemilla">Mes Reparto</string>
    <string name="MesDevolucionSemilla">Mes Devolución</string>
    <string name="ManejoSemilla">Manejo</string>
    <string name="ConsumirSemilla">Como Consumir</string>
    <string name="DescripcionSemilla">Descripción</string>
    <string name="OtrosDatosSemilla">Otros Datos</string>
    <string name="Disponibilidad">Disponibilidad</string>


    <!--ITEM SEMILLA -->
    <string name="NombreImagenSemilla">--</string>
    <string name="NombreCompletoSemilla">--</string>


    <!-- Perfil -->
    <string name="PerfilGuardianTXT">MI PERFIL</string>
    <string name="MiInformacionTXT">MI INFORMACIÓN</string>
    <string name="NombreGuardianTXT">Nombre Guardián: </string>
    <string name="NombreGuardian">--</string>
    <string name="CorreoGuardianTXT">Correo: </string>
    <string name="CorreoGuardian">--</string>
    <string name="TelefonoGuardianTXT">Telefono: </string>
    <string name="TelefonoGuardian">--:</string>
    <string name="DireccionGuardianTXT">Dirección: </string>
    <string name="DireccionGuardian">--</string>
    <string name="MunicipioGuardianTXT">Municipio: </string>
    <string name="MunicipioGuardian">--:</string>
    <string name="AsambleaGaurdianTXT">Pertenece a la asamblea: </string>
    <string name="AsambleaGaurdian">--</string>
    <string name="ActualizarPass">Actualizar Password </string>
    <string name="ActualizarDatos">Actualizar Datos</string>

    <!--CAMBIAR PASS -->
    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="PassActualTXT">Contraseña Actual: </string>
    <string name="PassActual">--</string>
    <string name="ActualPassET">Contraseña Actual</string>
    <string name="NuevoPassET">Nueva Contraseña</string>
    <string name="CambiarPassBtn">CAMBIAR CONTRASEÑA</string>
    <string name="IrInicioBtn">SALIR</string>
    <string name="NotaTXT">Si cambia la contraseña se cerrara la sesión</string>


    <!--GUARDIAN ITEM -->
    <string name="NombreGuardianItem">Nombre</string>
    <string name="CorreoGuardianItem">Correo electrónico </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- FRASE DE LA EMPRESA -->
    <string name="frase_empresa">Bienvenido a Banco de Semillas, la app que te ayudará a administrar y organizar de manera eficiente el control de semillas y sus guardianes. Es una herramienta diseñada por Csongor, Luis e Iván, un equipo de profesionales comprometidos en ofrecer soluciones innovadoras a la medida de las necesidades de tu empresa. Con nuestra aplicación podrás acceder a toda la información sobre un banco de semillas y sus tutores de forma rápida y sencilla.</string>

    <!-- Arrayu seleccion disponibilidad -->
    <string-array name="opciones_disponibilidad">
        <item>Sí</item>
        <item>No</item>
    </string-array>
</resources>