<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/InicioGuardian"
            android:title="@string/InicioGuardian"
            android:icon="@drawable/ic_action_name"/>

        <item
            android:id="@+id/PerfilGuardian"
            android:title="@string/PerfilGuardian"
            android:icon="@drawable/ic_action_name"/>

        <item
            android:id="@+id/ListarSemillasGuardian"
            android:title="@string/ListarSemillasGuardian"
            android:icon="@drawable/ic_action_name"/>

        <item
            android:id="@+id/ListarSemillasBanco"
            android:title="@string/ListarSemillasBanco"
            android:icon="@drawable/ic_action_name"/>

        <item
            android:id="@+id/Salir"
            android:title="@string/Salir"
            android:icon="@drawable/ic_action_name"/>

    </group>

</menu>