<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccffcc"
    tools:context=".FragmentosAdministrador.PerfilGuardian">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/PerfilGuardianTXT"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#086A87"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#E6F0FA" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/FotoPerfilGuardian"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/perfil"/>

    <TextView
        android:text="@string/MiInformacionTXT"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#086A87"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E6F0FA" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/NombreGuardianTXT"
            android:text="Administrador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/NombreGardian"
            android:text="@string/NombreGuardian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/CorreoGuardianTXT"
            android:text="@string/CorreoGuardianTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/CorreoGuardian"
            android:text="@string/CorreoGuardian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/TelefonoGuardianTXT"
            android:text="@string/TelefonoGuardianTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/TelefonoGuardian"
            android:text="@string/TelefonoGuardian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/DireccionGuardianTXT"
            android:text="@string/DireccionGuardianTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/DireccionGuardian"
            android:text="@string/DireccionGuardian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/MunicipioGuardianTXT"
            android:text="@string/MunicipioGuardianTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/MunicipioGuardian"
            android:text="@string/MunicipioGuardian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/AsambleaGaurdianTXT"
            android:text="@string/AsambleaGaurdianTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/AsambleaGaurdian"
            android:text="@string/AsambleaGaurdian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="18sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/ActualizarPass"
        android:text="@string/ActualizarPass"
        android:layout_width="230dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="15dp"
        android:background="@drawable/formabotones"
        android:drawableStart="@drawable/edit_ico"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/ActualizarDatos"
        android:text="@string/ActualizarDatos"
        android:layout_width="230dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@drawable/formabotones"
        android:drawableStart="@drawable/edit_ico"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>


</androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>